<resources>
    <string name="app_name">Inventory App</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="no_products_to_be_shown">There are no products to be shown. Use the \"ADD\" button to insert a new product.</string>
    <string name="sale_button_text">Sale</string>
    <string name="button_add_text">Add</string>
    <string name="image_button_text">Image</string>
    <string name="order_more_button_text">Order More</string>
    <string name="increase_button_text">Received One</string>
    <string name="decrease_button_text">Sold One</string>
    <string name="save_button_text">Save</string>
    <string name="close_button_text">Close</string>
    <string name="delete_button_text">Delete</string>
    <string name="suppliers_phone_number_edittext_hint">Supplier\'s Phone #</string>
    <string name="price_edittext_hint">Price</string>
    <string name="quantity_edittext_hint">Quantity</string>
    <string name="product_name_edittext_hint">Product Name</string>
</resources>
