<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LL_Detail_Main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.instinctcoder.sqlitedb.ProductDetail$PlaceholderFragment">

    <ScrollView
        android:id="@+id/SV_Detail_Main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <LinearLayout
            android:id="@+id/LL_Detail_Contents"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/LL_Edit_Product_Details"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_marginBottom="@dimen/detail_screen_middle_margin">

                <LinearLayout
                    android:id="@+id/LL_Edit_ImageView_And_TextViews"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/LL_Image_Area"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:orientation="vertical"
                        android:background="@color/imageview_background_color">

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="fill_parent"
                            android:id="@+id/LL_ImageView"
                            android:layout_weight="1"
                            android:gravity="center">

                            <ImageView
                                android:id="@+id/ImageView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_alignTop="@+id/LL_Confirm_Deletion"
                                android:layout_toEndOf="@+id/LL_Confirm_Deletion"
                                android:layout_toRightOf="@+id/LL_Confirm_Deletion" />
                        </LinearLayout>

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1.5"
                            android:gravity="center|bottom"
                            android:id="@+id/LL_Button_Image">

                            <Button
                                android:id="@+id/Button_Image"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/LL_Edit_ImageView_And_TextViews"
                                android:layout_toEndOf="@+id/LL_Confirm_Deletion"
                                android:layout_toRightOf="@+id/LL_Confirm_Deletion"
                                android:text="@string/image_button_text" />
                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/LL_EditViews"
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/ET_Name"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:ems="10"
                            android:gravity="right"
                            android:hint="@string/product_name_edittext_hint"
                            android:inputType="text" />

                        <EditText
                            android:id="@+id/ET_Quantity"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignEnd="@+id/ET_Name"
                            android:layout_alignRight="@+id/ET_Name"
                            android:ems="10"
                            android:gravity="right"
                            android:hint="@string/quantity_edittext_hint"
                            android:inputType="number" />

                        <EditText
                            android:id="@+id/ET_Price"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignEnd="@+id/ET_Quantity"
                            android:layout_alignRight="@+id/ET_Quantity"
                            android:ems="2"
                            android:gravity="right"
                            android:hint="@string/price_edittext_hint"
                            android:inputType="number|numberDecimal" />

                        <EditText
                            android:id="@+id/ET_Phone"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignEnd="@+id/ET_Name"
                            android:layout_alignRight="@+id/ET_Name"
                            android:ems="10"
                            android:gravity="right"
                            android:hint="@string/suppliers_phone_number_edittext_hint"
                            android:inputType="number" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LL_Edit_Buttons"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="horizontal"
                android:visibility="visible">

                <LinearLayout
                    android:id="@+id/LL_Edit_Buttons_Left"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/Button_Order_More"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/LL_Confirm_Deletion"
                        android:layout_alignParentBottom="true"
                        android:layout_alignStart="@+id/LL_Confirm_Deletion"
                        android:layout_gravity="left"
                        android:text="@string/order_more_button_text" />

                    <Button
                        android:id="@+id/Button_Recieved_One"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/increase_button_text" />

                    <Button
                        android:id="@+id/Button_Sold_One"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/decrease_button_text" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LL_Edit_Buttons_Middle"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="2.5"
                    android:orientation="vertical">

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LL_Edit_Buttons_Right"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.5"
                    android:gravity="left"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/Button_Save"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_toLeftOf="@+id/Button_Close"
                        android:text="@string/save_button_text" />

                    <Button
                        android:id="@+id/Button_Close"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:text="@string/close_button_text" />

                    <Button
                        android:id="@+id/Button_Delete"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@+id/Button_Save"
                        android:layout_toLeftOf="@+id/Button_Save"
                        android:text="@string/delete_button_text" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LL_Confirm_Deletion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/ET_Price"
                android:layout_alignParentBottom="true"
                android:layout_alignRight="@+id/ET_Price"
                android:gravity="center|bottom"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/TV_Price"
                    android:layout_marginBottom="@dimen/confirm_deletion_button_bottom_margin"
                    android:layout_marginTop="@dimen/confirm_deletion_button_top_margin"
                    android:text="Confirm product deletion."
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <Button
                            android:id="@+id/Button_Confirm_Deletion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentTop="true"
                            android:text="Confirm" />

                        <Button
                            android:id="@+id/Button_Cancel_Deletion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentTop="true"
                            android:text="Cancel" />
                    </RelativeLayout>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>